Revert "refactor: 자료형 수정, 이름 수정"
This reverts commit 830d8a326553c03f7b9c72422adc836c9e4afb0e.